force-app/main/default/objects/Noncredit_Invoice_Payment__c/Noncredit_Invoice_Payment__c.object-meta.xml
<CustomObject>
    <description>Payment against a noncredit invoice.</description>
    <label>Noncredit Invoice Payment</label>
    <nameField>
        <label>Payment Transaction Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Noncredit Invoice Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>