force-app/main/default/objects/Noncredit_Invoice_Payment__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Value of the payment.</description>
    <inlineHelpText>Value of the payment.</inlineHelpText>
    <label>Amount</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>