force-app/main/default/objects/Noncredit_Invoice_Payment__c/fields/CSU_Trans_Id__c.field-meta.xml
<CustomField>
    <fullName>CSU_Trans_Id__c</fullName>
    <description>Transaction ID we generated (e.g. Opus Trans Id for now)</description>
    <externalId>true</externalId>
    <inlineHelpText>Transaction ID we generated (e.g. Opus Trans Id for now)</inlineHelpText>
    <label>CSU Trans Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>