force-app/main/default/objects/Noncredit_Invoice_Payment__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <description>Listed reason for a payment failure.</description>
    <inlineHelpText>Listed reason for a payment failure.</inlineHelpText>
    <label>Failure Reason</label>
    <type>TextArea</type>
</CustomField>