force-app/main/default/objects/Noncredit_Invoice_Payment__c/fields/Is_Actual__c.field-meta.xml
<CustomField>
    <fullName>Is_Actual__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Actual payment amount - not a credit transfer.</description>
    <inlineHelpText>True if this payment is not a credit transfer.</inlineHelpText>
    <label>Is Actual</label>
    <type>Checkbox</type>
</CustomField>