force-app/main/default/objects/Noncredit_Invoice_Payment__c/fields/Noncredit_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Noncredit_Invoice__c</fullName>
    <description>Invoice to pay against.</description>
    <inlineHelpText>Invoice to pay against.</inlineHelpText>
    <label>Noncredit Invoice</label>
    <referenceTo>Noncredit_Invoice__c</referenceTo>
    <relationshipLabel>Noncredit Invoice Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>