force-app/main/default/objects/Noncredit_Invoice_Payment__c/fields/Noncredit_Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Noncredit_Invoice_Line_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The debit that covers this credit.</description>
    <inlineHelpText>The debit that covers this credit.</inlineHelpText>
    <label>Noncredit Invoice Line Item</label>
    <referenceTo>Noncredit_Invoice_Line_Item__c</referenceTo>
    <relationshipLabel>Covered Credits</relationshipLabel>
    <relationshipName>Covered_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>