force-app/main/default/objects/Noncredit_Invoice_Payment__c/fields/Posted_At__c.field-meta.xml
<CustomField>
    <fullName>Posted_At__c</fullName>
    <description>Datetime at which the payment was posted.</description>
    <inlineHelpText>Datetime at which the payment was posted.</inlineHelpText>
    <label>Posted At</label>
    <type>DateTime</type>
</CustomField>