force-app/main/default/objects/Noncredit_Invoice_Payment__c/fields/Processor_Trans_Id__c.field-meta.xml
<CustomField>
    <fullName>Processor_Trans_Id__c</fullName>
    <description>The Transaction Id of the processor</description>
    <externalId>true</externalId>
    <inlineHelpText>The Transaction Id of the processor</inlineHelpText>
    <label>Processor Trans Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>