force-app/main/default/objects/Noncredit_Invoice_Payment__c/fields/Processor_Trans_Status__c.field-meta.xml
<CustomField>
    <fullName>Processor_Trans_Status__c</fullName>
    <description>Status of the transaction in Auth.Net (or wherever)</description>
    <inlineHelpText>Status of the transaction in Auth.Net (or wherever)</inlineHelpText>
    <label>Processor Trans Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>