force-app/main/default/objects/Noncredit_Invoice_Payment__c/fields/Refund_For__c.field-meta.xml
<CustomField>
    <fullName>Refund_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This payment (-$ amount) refunds all or part of the referenced payment.</description>
    <inlineHelpText>This payment (-$ amount) refunds all or part of the referenced payment.</inlineHelpText>
    <label>Refund For</label>
    <referenceTo>Noncredit_Invoice_Payment__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>