force-app/main/default/objects/Noncredit_Invoice_Payment__c/fields/Successful__c.field-meta.xml
<CustomField>
    <fullName>Successful__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Was the transaction Successful?</description>
    <inlineHelpText>Was the transaction Successful?</inlineHelpText>
    <label>Successful</label>
    <type>Checkbox</type>
</CustomField>